Changed file sass (added styles for less resolution)

--- a/games.html
+++ b/games.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Games</title>
-    <link rel="stylesheet" href="style_index.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style-adaptive1.css">
-    <link rel="stylesheet" href="style-adaptive2.css">
+    <link rel="stylesheet" href="sass/style_index.css">
+    <link rel="stylesheet" href="sass/style.css">
+    <link rel="stylesheet" href="sass/style-adaptive1.css">
+    <link rel="stylesheet" href="sass/style-adaptive2.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="animation.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
