--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home</title>
-    <link rel="stylesheet" href="style_index.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style-adaptive1.css">
-    <link rel="stylesheet" href="style-adaptive2.css">
+    <link rel="stylesheet" href="sass/style_index.css">
+    <link rel="stylesheet" href="sass/style.css">
+    <link rel="stylesheet" href="sass/style-adaptive1.css">
+    <link rel="stylesheet" href="sass/style-adaptive2.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="animation.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
@@ -99,6 +99,25 @@
         <a class="link-trending-1 revealator-zoomout revealator-delay1 revealator-duration8" href="games_description.html"><img class="trend-product" src="img/trending-1.jpg" alt="trending-product"></a>
         <a class="link-trending-2 revealator-zoomout revealator-delay1 revealator-duration8" href="games_description.html"><img class="trend-product" src="img/trending-2.jpg" alt="trending-product"></a>
         <a class="link-trending-3 revealator-zoomout revealator-delay1 revealator-duration8" href="games_description.html"><img class="trend-product" src="img/trending-3.jpg" alt="trending-product"></a>
+    </div>
+    <div class="top_games">
+        <p id="joke-qaution"></p>
+        <p id="joke-answer"></p>
+        <script>
+            $(document).ready(function (){
+                $.get('https://official-joke-api.appspot.com/random_joke', function(data){
+                    $('#joke-qaution').html(data['setup'])
+                                        .css('text-align', 'center')
+                                        .css('width', '80%')
+                                        .css('margin-left', '10%');
+                    $('#joke-answer').html(data['punchline'])
+                        .css('text-align', 'center')
+                        .css('width', '80%')
+                        .css('margin-left', '10%')
+                        .css('margin-bottom', '5%');
+                });
+            }) // end ready
+        </script>
     </div>
     <div class="slider_footer">
         <a class="link-sign-in button-footer" href="contacts.html">Sign in</a>
